log
Wed, Apr 16, 2025  8:39:55 AM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Wed, Apr 16, 2025  8:40:14 AM: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
1a56170
Wed, Apr 16, 2025  8:42:01 AM: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|5
total_score: 10/70
a215379
Wed, Apr 16, 2025  9:03:25 AM: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  1|5
total_score: 10/70
55ecd72
Wed, Apr 16, 2025  9:04:38 AM: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
ef1ac93
Wed, Apr 16, 2025  9:13:15 AM: 
 hashmap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  0|0
e402773
Wed, Apr 16, 2025  9:14:37 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0f303ce
Wed, Apr 16, 2025  9:22:17 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
7df17a0
Wed, Apr 16, 2025  9:22:36 AM: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
48b91b7
Wed, Apr 16, 2025  9:26:41 AM: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:58:24: error: implicit declaration of function 'stdrup' [-Werror=implicit-function-declaration]
         current->key = stdrup(key);
                        ^~~~~~
hashmap.c:58:22: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
         current->key = stdrup(key);
                      ^
cc1.exe: all warnings being treated as errors
d3cf6a7
Wed, Apr 16, 2025  9:30:39 AM: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|0
12b50ff
Wed, Apr 16, 2025 10:02:51 AM: 
 hashmap.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e030423
Wed, Apr 16, 2025 10:07:58 AM: 
 hashmap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 20/70
16f305b
Fri, Apr 18, 2025  2:06:47 PM: 
 tests:  0|0
95dbcbb
Fri, Apr 18, 2025  2:09:23 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
8f56648
